* Sat Jul 9 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.15-1)
- nmrfspectrum: Cyclic sweep mode.
- Faster transaction.

* Wed Jun 29 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.14-1)
- std::atomic of mingw is buggy? Back to the original one.

* Thu Jun 23 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.13-1)
- Faster transaction.
- OrientalMotor Flex: better recovery from errors.
- QD PPMS: adds controls.
- nmrspectrum: reads field values from QD PPMS.

* Thu Mar 10 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.12-1)
- QD PPMS monitor: adds user temp
- dcsource: scalar entry.

* Sun Feb 7 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.11-1)
- xwavengraph: avoids IO during dumping transaction.
- QD PPMS monitor

* Sun Sep 13 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.10-1)
- Baudrate for Modbus RTU (Flex AR/CRK) is defaulted to 57600bps.
- OMRON E5*C controller via Modbus RTU.

* Tue Aug 18 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.9-1)
- Fix chart.
- Fix for old LS340.

* Fri Jun 19 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.8-1)
- Space as delimiter for text files, again.
- Faster XXYPlot.

* Fri Jun 19 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.7-1)
- Tab as delimiter for text files.

* Wed Jun 17 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.6-1)
- revives gpib_reset() for oxford.

* Mon Jun 15 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.5-1)
- Rewrites XCharInterface

* Thu Jun 11 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.4-1)
- Allows retrys for fujikinprotocol.
- Fix for behavior during stopping interface.
- Fix for NI DSO that has more than 2 channels.

* Sat Jun 6 2015 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.1.3-1)
- Gas flow contorl for ITC503
- Suppresses error messages from gsl.
- Fix for SerialEOS.
