@@ -6,28 +6,31 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>728</width>
-    <height>494</height>
+    <width>703</width>
+    <height>562</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>NMR/NQR Relax(T1) Measurement</string>
   </property>
   <widget class="QWidget" name="widget">
-   <layout class="QGridLayout" name="gridLayout_2">
+   <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <property name="spacing">
+     <number>6</number>
+    </property>
     <property name="leftMargin">
-     <number>2</number>
+     <number>4</number>
     </property>
     <property name="topMargin">
-     <number>2</number>
+     <number>4</number>
     </property>
     <property name="rightMargin">
-     <number>2</number>
+     <number>4</number>
     </property>
     <property name="bottomMargin">
-     <number>2</number>
+     <number>4</number>
     </property>
-    <item row="0" column="0">
+    <item>
      <widget class="QSplitter" name="splitter">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -45,9 +48,9 @@
        <property name="margin" stdset="0">
         <number>3</number>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout_7">
+       <layout class="QVBoxLayout" name="verticalLayout_3">
         <property name="spacing">
-         <number>-1</number>
+         <number>6</number>
         </property>
         <property name="leftMargin">
          <number>4</number>
@@ -95,25 +98,9 @@
          </layout>
         </item>
         <item>
-         <widget class="QCheckBox" name="m_ckbAutoPhase">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>&amp;Auto Phase</string>
-          </property>
-          <property name="shortcut">
-           <string>Alt+A</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QHBoxLayout">
+         <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QLabel" name="textLabel4">
+           <widget class="QCheckBox" name="m_ckbAutoPhase">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -121,13 +108,10 @@
              </sizepolicy>
             </property>
             <property name="text">
-             <string>Phase</string>
+             <string>&amp;Auto Phase</string>
             </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-            <property name="wordWrap">
-             <bool>false</bool>
+            <property name="shortcut">
+             <string>Alt+A</string>
             </property>
            </widget>
           </item>
@@ -158,6 +142,22 @@
            </widget>
           </item>
          </layout>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="m_ckbTrackPeak">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Track Peak Freq.</string>
+          </property>
+          <property name="shortcut">
+           <string>Alt+A</string>
+          </property>
+         </widget>
         </item>
         <item>
          <layout class="QHBoxLayout">
@@ -412,7 +412,7 @@
         <item>
          <widget class="QTextBrowser" name="m_txtFitStatus">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+           <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
@@ -420,7 +420,7 @@
           <property name="minimumSize">
            <size>
             <width>100</width>
-            <height>0</height>
+            <height>50</height>
            </size>
           </property>
           <property name="frameShape">
@@ -461,11 +461,25 @@
          </widget>
         </item>
        </layout>
+       <zorder>textLabel4_2</zorder>
+       <zorder>m_txtFitStatus</zorder>
+       <zorder>m_btnResetFit</zorder>
+       <zorder>m_btnClear</zorder>
+       <zorder>m_ckbTrackPeak</zorder>
+       <zorder></zorder>
+       <zorder></zorder>
+       <zorder>m_ckbAutoWindow</zorder>
       </widget>
       <widget class="QWidget" name="layoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout_2">
+        <property name="spacing">
+         <number>6</number>
+        </property>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <property name="spacing">
+           <number>6</number>
+          </property>
           <property name="sizeConstraint">
            <enum>QLayout::SetDefaultConstraint</enum>
           </property>
@@ -848,6 +862,9 @@
         </item>
         <item>
          <layout class="QHBoxLayout">
+          <property name="spacing">
+           <number>6</number>
+          </property>
           <item>
            <widget class="QLineEdit" name="m_edDump"/>
           </item>
@@ -886,11 +903,13 @@
   </customwidget>
  </customwidgets>
  <tabstops>
+  <tabstop>m_btnDump</tabstop>
   <tabstop>m_ckbMInftyFit</tabstop>
   <tabstop>m_ckbAbsFit</tabstop>
   <tabstop>m_ckbAutoPhase</tabstop>
   <tabstop>m_slPhase</tabstop>
   <tabstop>m_dblPhase</tabstop>
+  <tabstop>m_ckbTrackPeak</tabstop>
   <tabstop>m_edFreq</tabstop>
   <tabstop>m_edSmoothSamples</tabstop>
   <tabstop>m_ckbAutoWindow</tabstop>
@@ -912,7 +931,6 @@
   <tabstop>m_edP1Max</tabstop>
   <tabstop>m_edDump</tabstop>
   <tabstop>m_tbDump</tabstop>
-  <tabstop>m_btnDump</tabstop>
  </tabstops>
  <resources/>
  <connections/>
